Fixed visual snapshot layout issues (added stylesheet) and fixed some references in the snapshot_browser so it works like snapshot_ecosystem.

--- a/css/snapshot.css
+++ b/css/snapshot.css
@@ -143,6 +143,7 @@ body{
 }
 
 #ecosystem{
+    width: 100%;
   clear:both;
 }
 
@@ -185,6 +186,7 @@ if it's not present, don't show loader */
   margin:1px 0px 1px 1px;
   min-width:100px;
   text-align: center;
+    align-content: center;
 }
 
 
